--- a/css/skills.css
+++ b/css/skills.css
@@ -54,7 +54,7 @@ This is because number of skills doesn't have a limit as users will make more (n
 }
 
 .skills_categories_list .darkpp:hover {
-	background-color: #333;s
+	background-color: #333;
 }
 
 .container .filter-tabs{
